--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -281,11 +281,36 @@ event_study(data = df.core,
 p0
 
 ggsave(filename = "Picture3ah.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0, width = 17, height = 9)
+
+
+p0.simple <- ggarrange(
+event_study(data = df.core, 
+  yname = "Qcomp", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) <= 5) %>% 
+  filter(estimator == "Gardner (2021)") %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6)+ theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Quality Composite")+ xlab("Year Relative to Competitive Shock") + ylab("Percentage Points"), 
+event_study(data = df.core, 
+  yname = "Altman", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) <= 5) %>% 
+  filter(estimator == "Gardner (2021)") %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Altman's Z Score") + xlab("Year Relative to Competitive Shock") + ylab("Risk Units"), common.legend = TRUE, ncol = 2, legend = F) 
+p0.simple
+
+ggsave(filename = "Picture3ahSimple.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0.simple, width = 17, height = 9)
+
+
+
 ```
 
 
 
-## Resources to support utilization
+## Resources to support utilization, capacity
 
 ```{r}
 
@@ -310,9 +335,11 @@ df.util <- dfc %>%
          Perminance = ifelse(is.na(Perminance), 0, Perminance), 
          Schedule = ifelse(is.na(Schedule), 0, Schedule), 
          Calendar = ifelse(is.na(Calendar), 0, Calendar)), by = c("BHCMIS ID","Year")) %>% 
+  mutate(logPatsPerStaff = log(Total / Staff)) %>% 
   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
          Staff, #Assets, 
          Sites.y, #HIV.prev:Hypertension.care, pap.denom, crc.denom, adultbmi.denom, childbmi.denom, htn.denom, dm.denom,#MCD:COM, 
+         logPatsPerStaff, 
          Pct.NHA:Pct.COM)
 
 
@@ -321,9 +348,9 @@ df.util <- dfc %>%
 
 did.util <- c(0, 0, 0, 0)
 
-for (j in 10:11){
+for (j in 10:12){
   
-  df.temp <- df.util[,c(1:9, j, 12:ncol(df.util))]
+  df.temp <- df.util[,c(1:9, j, 13:ncol(df.util))]
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
       data = df.temp  , 
@@ -349,12 +376,12 @@ p1 <- df.util %>%
   mutate(Post = ifelse(year.rel >= 0, 1, 0), 
          Treated = ifelse(Att > 0, 1, 0)) %>% 
   group_by(Post, Treated) %>% 
-  select(Staff:Sites.y) %>% 
+  select(Staff:logPatsPerStaff) %>% 
   summarise_all(mean.nas) %>% 
   # summarise(Total = mean(Total, na.rm = TRUE), 
   #           Quality = mean(Qcomp, na.rm = TRUE), 
   #           Finances = mean(Altman, na.rm = TRUE)) %>% 
-  pivot_longer(cols = Staff:Sites.y) %>% 
+  pivot_longer(cols = Staff:logPatsPerStaff) %>% 
   mutate(value = round(value, 2)) %>% 
   #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
@@ -414,7 +441,39 @@ summary(lm(data = df.util %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treat
 summary(lm(data = df.util %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Sites.y ~ Treated*year.rel))$coeff[4,]
 
 
+did2s(
+      data = dfc %>% mutate(outcome = log(Total / Staff)) %>% filter(outcome < 8 & !is.infinite(outcome)), 
+      yname = "outcome", 
+      treatment = "Tx",
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , #Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None | ID + Year , 
+        second_stage = ~ i(Tx, ref = FALSE),
+        cluster_var = "STATE",
+      verbose = TRUE
+    )
 
+
+exp(0.042076)
+exp(0.19)
+
+hist((dfc$Total / dfc$Staff))
+summary(log(dfc$Total / dfc$Staff))
+
+
+
+
+p14 <- event_study(data = dfc %>% mutate(outcome = log(Total / Staff)) %>% filter(outcome < 10),
+  yname = "outcome", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>%
+  #mutate(estimate = exp(estimate), std.error = exp(std.error)) %>% 
+  filter(abs(term) <= 5) %>%
+  filter(estimator == "Gardner (2021)") %>%
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Event Study - Effects of Competitive Shock on log Ratio of Patients Per Staff Member") + xlab("Year Relative to Competitive Shock") + ylab("log Patients") 
+
+p14
+
+ggsave(filename = "Picture14.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p14, width = 17, height = 9)
 
 ```
 
@@ -422,81 +481,81 @@ summary(lm(data = df.util %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treat
 ## Broken down by components
 ```{r}
 # 
-# df.core <- dfc %>% 
+# df.core <- dfc %>%
 #   mutate( MCD = Total * Pct.MCD / 100,
 #          None = Total * Pct.None / 100,
 #          MCR = Total * Pct.MCR / 100,
 #          COM = Total * Pct.COM / 100,
-#          
-#          crc.rate = crc.rate * 100, 
-#          pap.rate = pap.rate * 100, 
-#          childbmi.rate = childbmi.rate * 100, 
-#          adultbmi.rate = adultbmi.rate * 100, 
-#          htn.rate = htn.rate * 100, 
-#          dm.rate = dm.rate * 100) %>% 
-#   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
-#          MCD:COM, 
-#          crc.rate, pap.rate, childbmi.rate, adultbmi.rate, htn.rate, dm.rate, 
-#          Liquidity:NetWorth, 
-#          Pct.NHA:Pct.COM) #%>%  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman))#, #pap.rate:dm.total, Liquidity:Altman) 
-#   
+# 
+#          crc.rate = crc.rate * 100,
+#          pap.rate = pap.rate * 100,
+#          childbmi.rate = childbmi.rate * 100,
+#          adultbmi.rate = adultbmi.rate * 100,
+#          htn.rate = htn.rate * 100,
+#          dm.rate = dm.rate * 100) %>%
+#   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE,
+#          MCD:COM,
+#          crc.rate, pap.rate, childbmi.rate, adultbmi.rate, htn.rate, dm.rate,
+#          Liquidity:NetWorth,
+#          Pct.NHA:Pct.COM) #%>%  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman))#, #pap.rate:dm.total, Liquidity:Altman)
+# 
 # 
 # 
 # 
 # did.core <- c(0, 0, 0, 0)
 # 
 # for (j in 10:23){
-#   
+# 
 #   df.temp <- df.core[,c(1:9, j, 24:ncol(df.core))]
 #   colnames(df.temp)[10] <- "Outcome"
 #   outcomes <- did2s(
-#       data = df.temp, 
-#       yname = "Outcome", 
+#       data = df.temp,
+#       yname = "Outcome",
 #       treatment = "Tx",
-#         first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , 
+#         first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year ,
 #         second_stage = ~ i(Tx, ref = FALSE),
 #         cluster_var = "STATE",
 #       verbose = FALSE
 #     )
-#   
+# 
 #   did.core <- rbind(did.core, outcomes$coeftable)
-#   
-#   
+# 
+# 
 # }
 # 
 # 
 # did.core <- did.core[-1,]
 # rownames(did.core) <- NULL
 # 
-
 # 
-# df.core %>% 
-#   mutate(Post = ifelse(year.rel >= 0, 1, 0), 
-#          Treated = ifelse(Att > 0, 1, 0)) %>% 
-#   group_by(Post, Treated) %>% 
-#   select(MCD:NetWorth) %>% 
-#   summarise_all(mean.nas) %>% 
-#   # summarise(Total = mean(Total, na.rm = TRUE), 
-#   #           Quality = mean(Qcomp, na.rm = TRUE), 
-#   #           Finances = mean(Altman, na.rm = TRUE)) %>% 
-#   pivot_longer(cols = MCD:NetWorth) %>% 
-#   mutate(value = round(value, 2)) %>% 
-#   #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
-#   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
-#   mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
-#   cbind(did.core) %>% 
-#    select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
-#   mutate(Estimate = round(Estimate, 2), 
-#          `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
-#          `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
-#   rename(Outcome = name) %>% 
-#   select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
-#   kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
+# 
+# df.core %>%
+#   mutate(Post = ifelse(year.rel >= 0, 1, 0),
+#          Treated = ifelse(Att > 0, 1, 0)) %>%
+#   group_by(Post, Treated) %>%
+#   select(MCD:NetWorth) %>%
+#   summarise_all(mean.nas) %>%
+#   # summarise(Total = mean(Total, na.rm = TRUE),
+#   #           Quality = mean(Qcomp, na.rm = TRUE),
+#   #           Finances = mean(Altman, na.rm = TRUE)) %>%
+#   pivot_longer(cols = MCD:NetWorth) %>%
+#   mutate(value = round(value, 2)) %>%
+#   #filter(name %in% c("Total", "Qcomp", "Altman")) %>%
+#   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>%
+#   mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>%
+#   cbind(did.core) %>%
+#    select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>%
+#   mutate(Estimate = round(Estimate, 2),
+#          `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""),
+#          `% Change` = round(Estimate / `1_0` * 100, 1)) %>%
+#   rename(Outcome = name) %>%
+#   select(Outcome:Estimate, `95% CI`, `% Change`) %>%
+#   kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>%
 #   kable_styling(latex_options = c("striped")) %>%
-#   pack_rows(index = c("Total Patients by Insurnace" = 4, "Quality Measure Components" = 6, "Financial Components" = 4)) %>% 
+#   pack_rows(index = c("Total Patients by Insurnace" = 4, "Quality Measure Components" = 6, "Financial Components" = 4)) %>%
 #   add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
-# 
-# 
+
+
 
 ```
 
@@ -596,18 +655,18 @@ p2 <- ggarrange(
   yname = "Complexity", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) <= 5) %>% 
   filter(estimator == "Gardner (2021)") %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Complexity") + xlab("Year Relative to Competitive Shock")  + ylab("Prevalence"), 
 event_study(data = df.select.stint, 
   yname = "Intensity", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) <= 5) %>% 
   filter(estimator == "Gardner (2021)") %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Intensity") + xlab("Year Relative to Competitive Shock") + ylab("Visits"), common.legend = TRUE ) 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Intensity") + xlab("Year Relative to Competitive Shock") + ylab("Visits"), common.legend = TRUE, legend = F) 
 p2
 
 
@@ -616,7 +675,7 @@ summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% muta
 summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Intensity ~ Treated*year.rel))$coeff[4,]
 
 
-
+ggsave(filename = "Picture4.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p2, width = 17, height = 9)
 
 
 
@@ -758,7 +817,7 @@ summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% muta
 summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), COM ~ Treated*year.rel))$coeff[4,]
 
 
-
+ggsave(filename = "Picture5.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = pm, width = 17, height = 9)
 ```
 
 
@@ -1784,9 +1843,9 @@ zp1 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.8)),
   yname = "Sites", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Locations in Farthest 20% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Number of Locations")
 
 
@@ -1795,9 +1854,9 @@ zp2 <- event_study(data = df.spill3 %>% filter(Dist == 0),
   yname = "Sites", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Locations in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Number of Locations")
 
 
@@ -1805,9 +1864,9 @@ zp3 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.8)) %>% m
   yname = "Total.Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Farthest 20% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
 
 
@@ -1816,9 +1875,9 @@ zp4 <- event_study(data = df.spill3 %>% filter(Dist == 0) %>% mutate(Hours = ife
   yname = "Total.Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
 
 
