--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -768,9 +768,9 @@ pm1 <- event_study(data = df.select.payer,
   yname = "MCD", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicaid") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
 
 
@@ -779,9 +779,9 @@ pm2 <- event_study(data = df.select.payer,
   yname = "COM", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Private") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
 
 
@@ -789,9 +789,9 @@ pm3 <- event_study(data = df.select.payer,
   yname = "MCR", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicare") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
 
 
@@ -800,9 +800,9 @@ pm4 <- event_study(data = df.select.payer,
   yname = "None", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
-  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
-  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
-  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Uninsured") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
 
 
@@ -817,7 +817,7 @@ summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% muta
 summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), COM ~ Treated*year.rel))$coeff[4,]
 
 
-ggsave(filename = "Picture5.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = pm, width = 17, height = 9)
+#ggsave(filename = "Picture5.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = pm, width = 17, height = 9)
 ```
 
 
